--- a/FinanceTracker/app/src/main/res/values/strings.xml
+++ b/FinanceTracker/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="total">TOTAL</string>
     <string name="expense">EXPENSE</string>
     <string name="income">INCOME</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
